# pyjags3

./: README.md
cjags/: CMakeCache.txt  CMakeLists.txt  Makefile  cjags.cbp  cmake_install.cmake  main.cpp
src/: a.out  build.sh  runJags.cpp
